--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,7 +43,7 @@
             <div class="container">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
                     <% if (newListItems.length==0){ %>
-                        <h3>No activities are found. Try another keyword or back to the homepage to see all activities.</h3>
+                        <h3>No activities are found. Try another activity tag or click the Search button again to go back to the homepage.</h3>
                         <% } else{ %>
                             <% newListItems.forEach(function(item){ %>
                                 <div class="col">
