--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -73,14 +73,14 @@
                 </div>
                 <div class="col-sm-6 col-lg-12 col-md-12">
                   <label for="">Credit Card Number</label>
-                <input required="required" name="EditedCreditNum" class="form-control"  value="<%= CreditNum %>">
+                <input required="required" name="EditedCreditNum" class="form-control"  value="**** **** **** <%= CreditNum %>">
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
                 </div>
                 <div class="col-sm-6 col-lg-12 col-md-12">
                   <label for="">CVC</label>
-                <input required="required" name="EditedCVC" class="form-control"  value="<%= cvc %>">
+                <input required="required" name="EditedCVC" class="form-control"  value="">
                   <div class="invalid-feedback">
                     Valid last name is required.
                   </div>
