--- a/views/servicelogin.ejs
+++ b/views/servicelogin.ejs
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/jquery.validate.js"></script>
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -16,16 +18,16 @@
   </head>
   <body class="text-center">
     <main class="form-signin">
-      <form class="" action="/serviceHome" method="post">
+      <form class="" id="ServiceProviderLogin" action="/serviceHome" method="post">
         <div class="">
         <img class ="tent-image"src="assets/images/tent.png" alt width="90" height="72">
         <h4 class="company">PASTIME</h4>
         <h1 class="h3 mb-3 fw-normal"> Sign in</h1>
         <h4 class="h3 fw-normal" style="color: <%= inputcolor %>"> <%= FirstLine %><br /> <%= SecondLine%> </h4>
         <label for="inputEmail" class="virtually-hidden"></label>
-        <input id="inputEmail" name="serviceEmail" class="form-control" placeholder="Email address" required="" autofocus="">
+        <input id="inputEmail" type="email" name="serviceEmail" class="form-control" placeholder="Email address" required autofocus="">
         <label for="inputPassword" class="visually-hidden">Password</label>
-        <input type="password" name="servicePassword" id="inputPassword" class="form-control" placeholder="Password" required="">
+        <input type="password" name="servicePassword" id="inputPassword" class="form-control" placeholder="Password" required>
         <div class="checkbox mb-3">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
@@ -48,6 +50,8 @@
         </div>
       </div>
     </div>
-
+    <script>
+      $("#ServiceProviderLogin").validate();
+    </script>
   </body>
 </html>
