--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -19,13 +19,16 @@
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="favicon/site.webmanifest">
+    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="js/jquery.validate.js"></script>
+    <script src="js/signup-form.js"></script>
 </head>
 
 <body class="bg-light">
 
     <div class="container">
         <main>
-            <form class="" action="/aftersignup" method="post">
+            <form class="" id="RegularUserSignUp" action="/aftersignup" method="post">
                 <div class="py-5 text-center">
                     <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
                     <h4 style="text-align:center; padding-left: 0px;" class="company">PASTIME</h4>
@@ -37,30 +40,21 @@
                 <div class="row g-3">
                     <div class="col-md-6 top-buffer">
                         <label>First Name</label>
-                        <input required="required" name="FName" class="form-control" placeholder="Joshua">
-                        <div class="invalid-feedback">
-                            Valid first name is required.
-                        </div>
+                        <input id="firstname" name="FName" class="form-control" type="text" placeholder="Joshua">
                     </div>
                     <div class="col-md-6 top-buffer">
                         <label for="">Last Name</label>
-                        <input required="required" name="LName" class="form-control" placeholder="Appleseed">
-                        <div class="invalid-feedback">
-                            Valid last name is required.
-                        </div>
+                        <input id="lastname" name="LName" class="form-control" type="text" placeholder="Appleseed">                       
                     </div>
 
                     <div class="col-6 top-buffer">
                         <label for="inputEmail4">Email</label>
-                        <input required="required" type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">
-                        <div class="invalid-feedback">
-                            Please enter a valid email address for shipping updates.
-                        </div>
+                        <input  type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">                      
                     </div>
 
                     <div class="col-6 top-buffer">
                         <label>Password</label>
-                        <input required="required" type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
+                        <input  type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
                     </div>
                     <div class="btn1 top-buffer-2">
                         <button type="submit" class="btn btn-primary">Sign Up</button>
