--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -40,14 +40,14 @@
                 <div class="row g-3">
                     <div class="col-md-6 top-buffer">
                         <label>First Name</label>
-                        <input id="firstname" name="FName" class="form-control" type="text" placeholder="Joshua">
+                        <input required="required" id="firstname" name="FName" class="form-control" type="text" placeholder="Joshua">
                         <div class="invalid-feedback">
                             Valid first name is required.
                         </div>
                     </div>
                     <div class="col-md-6 top-buffer">
                         <label for="">Last Name</label>
-                        <input id="lastname" name="LName" class="form-control" type="text" placeholder="Appleseed">       
+                        <input required="required" id="lastname" name="LName" class="form-control" type="text" placeholder="Appleseed">       
                         <div class="invalid-feedback">
                             Valid last name is required.
                         </div>
@@ -55,7 +55,7 @@
 
                     <div class="col-6 top-buffer">
                         <label for="inputEmail4">Email</label>
-                        <input  type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">  
+                        <input required="required" type="email" name="Email" class="form-control" id="inputEmail4" placeholder="Email">  
                         <div class="invalid-feedback">
                             Please enter a valid email address for shipping updates.
                         </div>             
@@ -63,7 +63,7 @@
 
                     <div class="col-6 top-buffer">
                         <label>Password</label>
-                        <input  type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
+                        <input required="required" type="password" name="Pass" class="form-control" id="inputPassword4" placeholder="Password">
                     </div>
                     <div class="btn1 top-buffer-2">
                         <button type="submit" class="btn btn-primary">Sign Up</button>
