add points function

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,6 +17,7 @@
         <a href="checkout.html">Profile</a>
         <a href="previousActivities">PastActivities</a>
         <a href="wallet.html">Wallet</a>
+        <a href="points.html">Points</a>
         <a style="float:right;" href="index.html">Logout</a>
     </div>
 
