--- a/views/editActivityTemplate.ejs
+++ b/views/editActivityTemplate.ejs
@@ -36,7 +36,7 @@
           <div class="row g-3">
             <div class="col-sm-6">
               <label>Activity Name</label>
-            <input  required="required" readonly name="EditedName"class="form-control"  value="<%=item.Name%>">
+              <input required="required" name="EditedName" class="form-control" value="<%=item.Name%>">
               <div class="invalid-feedback">
                 Valid first name is required.
               </div>
@@ -84,7 +84,7 @@
             </div>
 
             <div style="padding-top: 2.15rem;"class="btn1 col-6">
-             <button type="submit" name="vote" value="Done" class="btn btn-primary">Done</button>
+             <!-- <button type="submit" name="vote" value="Done" class="btn btn-primary">Done</button> -->
               <button type="submit" name="vote"  value="Delete" class="btn btn-danger">Delete</button>
             </div>
         </form>
