--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -61,7 +61,7 @@
                   <div class="card shadow-sm">
                       <img src="<%=item.Image%>" alt="" height="225px" width="100%">
                         <div class="card-body">
-                          <a class="link"href="EditActivities/<%=item.Name%>"><b><%=item.Name%> </b></a>
+                          <a href="EditActivities/<%=item.Name%>"><b><%=item.Name%></b></a>
                           <p class="card-text"><%=item.Description%></p>
                           <div class="d-flex justify-content-between align-items-center">
                             <small class="text-muted venues"><%=item.Venue%></small>
