--- a/views/adminview.ejs
+++ b/views/adminview.ejs
@@ -26,14 +26,14 @@
          <br />
       </div>
       <%  newListItems.forEach(function(item){ %>
-      <table class="user-list">
+      <table style="padding-right:100px"class="user-list">
          <thead>
             <tr>
                <th>Name</th>
                <th>Email</th>
                <th>Edit</th>
-               <th>Delete</th>
                <th>Lock</th>
+               <!-- <th>Lock</th> -->
             </tr>
          </thead>
          <tbody>
@@ -47,14 +47,14 @@
                <td><button class="btn btn-dark" type="submit" name="vote" value="Lock"> <i class="fas fa-lock"></i> Lock</button></td>
                <td>
 
-                    <button class="btn btn-dark" id="settings-button-red" onclick="makePopup()" type="submit" name="vote" value="Delete" > <i class="fas fa-trash"></i> Delete
+                    <!-- <button class="btn btn-dark" id="settings-button-red" onclick="makePopup()" type="submit" name="vote" value="Delete" > <i class="fas fa-trash"></i> Delete -->
 
 </form>
-                      <div data-role="popup" data-arrow="true" id="arrow-popup">
+                      <!-- <div data-role="popup" data-arrow="true" id="arrow-popup">
                         <p>This is a popup containing several paragraphs of text.</p>
                         <p>The first paragraph is the one above. This is the second.</p>
                         <p>And here's another paragraph to help the popup achieve a decent height.</p>
-                    </div>
+                    </div> -->
 
 
 
