--- a/views/point.ejs
+++ b/views/point.ejs
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/checkout/">
+    <title>Points</title>
 
 
 
