--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,7 @@
                     <h1 class="fw-light">Welcome,
                         <%= MyName %>
                     </h1>
-                    <p class="lead text-muted">Some description of what we do and what we have to offer.</p>
+                    <!-- <p class="lead text-muted">Some description of what we do and what we have to offer.</p> -->
                     <div id="cityInput1" class="form-control col-lg-8">
                         <form class="" action="/searchActivity" method="GET">
                             <input type="text" name="activityTag" class="form-control col-lg-1" placeholder="Camping, Outdoors">
@@ -62,7 +62,7 @@
                                                 <small class="text-muted venues">
                           <%=item.Venue%>
                         </small>
-                                                <small class="text-muted">$<%=item.Price%></small>
+                                                <small class="text-muted"><%=item.Price%> Points</small>
                                             </div>
                                         </div>
                                     </div>
