--- a/views/activities.ejs
+++ b/views/activities.ejs
@@ -66,7 +66,7 @@
                 <p>Time:
                     <%= time %>
                 </p>
-                <p>Price: $
+                <p>Points:
                     <%= price %>
                 </p>
                 <button class="btn btn-dark" type="submit"><i class="fa fa-shopping-cart"></i> Add to cart</button>
