--- a/views/pastActivities.ejs
+++ b/views/pastActivities.ejs
@@ -31,7 +31,7 @@
           <h6 class="my-0"><%= item.Name%></h6>
           <small class="text-muted"><%= item.Date%></small>
         </div>
-        <span class="text-muted">$<%= item.Price %></span>
+        <span class="text-muted">Points:<%= item.Price %></span>
       </li>
      <%  }) %>
 
