--- a/views/servicehome.ejs
+++ b/views/servicehome.ejs
@@ -65,7 +65,7 @@
                           <p class="card-text"><%=item.Description%></p>
                           <div class="d-flex justify-content-between align-items-center">
                             <small class="text-muted venues"><%=item.Venue%></small>
-                            <small class="text-muted">$<%=item.Price%></small>
+                            <small class="text-muted">Points:<%=item.Price%></small>
                           </div>
                         </div>
                       </div>
