--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
 <body>
     <div class="topnav">
         <a class="active" href="#top">Home</a>
-        <a href="checkout.html">Profile</a>
+        <a href="Profile">Profile</a>
         <a href="previousActivities">Past Activities</a>
         <a href="wallet.html">Wallet</a>
         <a href="points.html">Points</a>
