--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles5.css">
-    <link rel="stylesheet" href="css/styles2.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
@@ -11,27 +10,18 @@
     <title>Profile</title>
   </head>
   <body body class="bg-light">
-    <div class="topnav">
-      <a href="../MainDashBoard">Back</a>
-      <!-- <a class="active" href="#top">Home</a>
-      <a href="checkout.html">Profile</a>
-      <a href="previousActivities">PastActivities</a>
-      <a href="wallet.html">Wallet</a>
-      <a href="points.html">Points</a>
-      <a style="float:right;" href="index.html">Logout</a> -->
-    </div>
+
+  
 
 
-
-
-
+    
     <div class="container">
       <main>
 
         <div class="py-5 text-center">
           <!-- <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57"> -->
           <h1 style="text-align:center;"class="company">PASTIME</h4>
-          <h4 style="text-align:center;"class="h3 mb-3 fw-normal">My Account</h1>
+          <h4 style="text-align:center;"class="h3 mb-3 fw-normal"> Edit My Account</h1>
         </div>
         <div class="row g-5">
           <div class="col-md-6 col-lg-12">
