--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -1,3 +1,10 @@
+body {
+    display: flex;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f5f5f5;
+}
 
 html,body {
     height: 100%;
@@ -16,35 +23,15 @@ h1{
     
 }
 
-#logo {
-    padding: 10px;
-    width: 90px;
-    height: auto;
-    display: block;
-    margin-left: auto;
-    margin-right: auto 
-    
-}
-
 
 body {
-    /* body {
-        display: flex;
-        align-items: center;
-        
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-    }  */
-    align-items: center;
-    padding-top:10%;
-    padding-bottom: 40px;
     margin: 0;
     font-family: var(--bs-font-sans-serif);
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    background-color: #212529;
-    /* background-color: #fff; */
+    color: #212529;
+    background-color: #fff;
     -webkit-text-size-adjust: 100%;
     -webkit-tap-highlight-color: transparent;
 }
@@ -54,82 +41,8 @@ body {
     max-width: 330px;
     padding: 15px;
     margin: auto;
-    align-items: center;
-}
-
-.form-signin img{
-    display:inline-block;
-    margin: 0 auto;
-
-}
-
-.form-signin h3{
-    display:inline-block;
-    text-align:center;
-    width: 100%;
-}
-
-.form-signin h1{
-    display:inline-block;
-    text-align:center;
-    width: 100%;
 }
 
 .text-center {
     text-align: center!important;
-}
-
-
-
-.body1 {
-
-    height: 50rem;
-    width: 100%;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.row {
-    justify-content: center;
-}
-
-.company {
-    font-weight: bold;
-    font-size: 40px;
-}
-
-.btn1 {
-    margin-top: 10px;
-}
-
-.maru {
-    text-align: center;
-}
-
-.login {
-    padding-bottom: 0%;
-    padding-top: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
-    background-color: #f6f6f6; 
-    display: inline-block;
-    margin-left: 20rem;
-    margin-top: 5rem;
-} 
-
-
-.company {
-    padding-top: 2%;
-    font-weight: bold;
-    font-size: 40px;
-    padding-left: 6%;
-}
-
-button{
-    margin-top: 50px;
-}
-
-.top-buffer {
-    margin-top: 20px;
 }
