--- a/views/servicesignup.ejs
+++ b/views/servicesignup.ejs
@@ -29,7 +29,7 @@
             <form class="" action="/serviceSignUp" method="post">
                 <div class="py-5 text-center">
                     <div class="form-signin">
-                    <img class="logo" src="assets/images/logo.png">
+                    <img class="logo" src="~/assets/images/logo.png">
                     <h4 style="text-align:center; padding-left: 0px" class="company">PASTIME</h4>
                     <h1 style=" padding-left: 0px;" ; class="h3 mb-3 fw-normal "> Sign up</h1>
                     <h4 class="h3 fw-normal" style="color: <%= inputcolor %>"> <%= FirstLine %><br /> <%= SecondLine%> </h4>
