--- a/views/userEditTemplate.ejs
+++ b/views/userEditTemplate.ejs
@@ -8,7 +8,7 @@
   <!-- Bootstrap script -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <!--CSS script-->
-  <link rel="stylesheet" href="css/styles3.css">
+  <link rel="stylesheet" href="css/auth.css">
   <!--Font Awesome script -->
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
   <!--JS script-->
@@ -27,8 +27,8 @@
   <main>
     <form class="" action="/afterEditUser" method="post">
     <div class="py-5 text-center">
-      <img class="d-block mx-auto mb-4" src="assets/images/tent.png" alt="" width="72" height="57">
-      <h4 style="text-align:center;"class="company">PASTIME</h4>
+      <!-- <img class="d-block mx-auto mb-4" src="assets/images/logo.png" alt="" width="72" height="57"> -->
+      <!-- <h4 style="text-align:center;"class="company">PASTIME</h4> -->
       <h1 style="padding-left: 3rem;"class="h3 mb-3 fw-normal"> Edit User</h1>
     </div>
     <div class="row g-5">
@@ -61,6 +61,8 @@
             <input required="required" name="EditedPass" type="password" class="form-control" id="inputPassword4" value="<%=item.Password%>">
             </div>
             <div class="btn1 col-6">
+              <br>
+              <br>
              <button type="submit" class="btn btn-primary">Done</button>
             </div>
         </form>
